# opentracingrust-zipkin

./: .gitignore  Cargo.toml  Changelog.md  Readme.md
examples/: basics.rs
src/: error.rs  lib.rs
src/collectors/: http.rs  kafka.rs  mod.rs
src/thrift_gen/: binary_format.rs  mod.rs  zipkin_core.rs
src/tracer/: context.rs  error.rs  extract.rs  inject.rs  mod.rs  trace_id.rs
thrift/: Dockerfile  binary_format.thrift
