[package]
name = "opentracingrust_zipkin"
version = "0.1.4"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

description = "Zipkin tracer for OpenTracingRust"
documentation = "https://docs.rs/opentracingrust_zipkin/"
homepage = "https://github.com/stefano-pogliani/opentracingrust_zipkin"
repository = "https://github.com/stefano-pogliani/opentracingrust-zipkin"
readme = "Readme.md"
keywords = ["opentracing", "tracing", "zipkin"]
license = "MIT"

[features]
default = ["kafka_transport"]
kafka_transport = ["kafka"]

[dependencies]
byteorder = "^1.2.1"
crossbeam-channel = "^0.3.8"
data-encoding = "^2.1.1"
kafka = { version = "^0.7.0", optional = true }
opentracingrust = "^0.3.2"
rand = "^0.4.0"
reqwest = "^0.9.17"
serde = "^1.0.27"
serde_json = "^1.0.9"

# Needed by thrift.
ordered-float = "^0.5.0"
thrift = "^0.0.4"
try_from = "^0.2.0"

# This patch is needed to make openssl (needed by kafka) work with openssl 1.0+
[patch.crates-io]
kafka = { git = 'https://github.com/l4l/kafka-rust', branch = 'update/openssl' }
