[package]
name = "opentracingrust_zipkin"
version = "0.3.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

description = "Zipkin tracer for OpenTracingRust"
documentation = "https://docs.rs/opentracingrust_zipkin/"
homepage = "https://github.com/stefano-pogliani/opentracingrust_zipkin"
repository = "https://github.com/stefano-pogliani/opentracingrust-zipkin"
readme = "Readme.md"
keywords = ["opentracing", "tracing", "zipkin"]
license = "MIT"

[features]
kafka_transport = ["kafka"]

[dependencies]
byteorder = "^1.2.1"
crossbeam-channel = "^0.4.2"
data-encoding = "^2.1.1"
futures = "^0.3.4"
kafka = { version = "^0.8.0", optional = true }
opentracingrust = "^0.4.0"
rand = "^0.7.3"
reqwest = "^0.10.4"
serde = "^1.0.27"
serde_json = "^1.0.9"
thrift = "^0.13.0"
